Fix overflow-x issue for animated-section, added delay and duration props

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,6 +59,7 @@ body {
   scrollbar-width: 0px;
   -ms-overflow-style: none;
   overflow-y: scroll;
+  overflow-x: none;
 }
 
 .scrollbar-hide::-webkit-scrollbar {
